@@ -327,13 +327,6 @@ contains
             call document ('ocn_init_mct', 'start_day ', start_day)
          endif
       end if
-!#ifndef _HIRES 
-!      if (seconds_this_day /= start_tod) then
-!         call document ('ocn_init_mct', 'sec0     ', seconds_this_day)
-!         call document ('ocn_init_mct', 'start_tod ', start_tod)
-!         call exit_POP(sigAbort,' sec0 does not start_tod')
-!      end if
-!#endif
    end if
 
 !-----------------------------------------------------------------------
